tests/NormalTests/paczka2/big_fuzzy/40829730.err
Error in line 8: GYoI S978 169,81
Error in line 11: UFjLIDqxP S646 18,1
Error in line 12: UFjLIDqxP S978 4,6
Error in line 15: UFjLIDqxP A520 18,2
Error in line 16: XSv S978 81,0
Error in line 26: XSv A520 67,9
Error in line 24: GYoI S978 27,0
Error in line 42: M1oUz9wBtPS S646 60,4
Error in line 43: S978 S978 52,1
Error in line 54: x1r A891 18,8
Error in line 47: S978 A891 78,1
Error in line 63: x1r A891 6,6
Error in line 73: M1oUz9wBtPS S646 73,5
Error in line 70: x1r S978 46,1
Error in line 83: GYoI S646 899,3
Error in line 88: GYoI S978 20,5
Error in line 94: M1oUz9wBtPS A520 81,5
Error in line 104: GYoI S978 78,4
Error in line 106: M1oUz9wBtPS A891 90,2
Error in line 110: M1oUz9wBtPS S646 69,9
Error in line 118: x1r A891 84,8
Error in line 116: M1oUz9wBtPS A891 70,0
Error in line 144: GYoI A520 39,77
Error in line 132: S978 S646 54,9
Error in line 147: x1r A520 5,2
Error in line 162: x1r A891 59,1
Error in line 164: x1r S978 -1,3
Error in line 165: U1Dqfjs S978 20,8
Error in line 163: x1r S978 16,7
Error in line 179: S978 S646 69,7
Error in line 177: XSv A520 0,2
Error in line 145: GYoI A520 177,9
Error in line 183: GYoI S978 23,2
Error in line 186: x1r A891 47,8
Error in line 193: XSv A520 39,8
Error in line 209: UFjLIDqxP S646 67,4
Error in line 207: S978 S646 19,1
Error in line 216: x1r A891 87,66
Error in line 228: x1r A891 44,6
Error in line 237: XSv A891 95,0
